Modified SQL builder & modified to accept db connection